changer couleur à travers une autre fenetre

--- a/TP_Complet_MapWinGis/TP_Complet_MapWinGis.vbproj
+++ b/TP_Complet_MapWinGis/TP_Complet_MapWinGis.vbproj
@@ -69,6 +69,12 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="changeColor.Designer.vb">
+      <DependentUpon>changeColor.vb</DependentUpon>
+    </Compile>
+    <Compile Include="changeColor.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +99,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="changeColor.resx">
+      <DependentUpon>changeColor.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
